added my github name

--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
         <div class="divimg"><img src="images/ubolt.jpg" id="img" alt="U Bolt">U Bolt</div>
         <div class="divimg"><img src="images/valves.jpg" id="img" alt="Valves">Valves</div>
         <div class="divimg"><img src="images/wpipe.jpg" id="img" alt="Pipes">Pipes</div>
-        <div class="divimg"><img src="images/tapes.jpg" id="img" alt="Tapes">Tapes</div>
+        <div class="divimg"><img src="images/tapes.jpg" id="img" alt="Tapes">Tapess</div>
     </body>
 </html>
