Changing tag line

--- a/firsttry.html
+++ b/firsttry.html
@@ -2,11 +2,11 @@
 <html>
 
     <head>
-        <title> Welcome to Harish metal India</title>
+        <title> Welcome</title>
         <link rel="stylesheet" href="stylesheet.css">
     </head>
     <body>
-       <div class="top" align="center"><h1 style="font-family: Courier" ><img id="logo" src="logo.jpg">Harish Metal (India)</h1><p style="color:white; font-family:cursive" align="Center">Trust is the key of success</p></div> 
+       <div class="top" align="center"><h1 style="font-family: Courier" ><img id="logo" src="logo.jpg">Harish Metal (India)</h1><p style="color:white; font-family:cursive" align="Center">Trust is the key of our success</p></div> 
         <div>
         <table >
         <tr>
