Changing Company name

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <div class="background-image"></div>
         <div class="top" align="center">
             <h1 style="font-family: Courier" ><img id="logo" src="images/logo.jpg"/>
-                Harish Metal (India)
+                Nexus Multi tradeLink
             </h1>
             <p style="color:white; font-family:cursive" align="Center">
                 Trust is the key of success
